@startuml
!define TABLE(name) class name << (T,#FFAAAA) >>



TABLE(Account) {
  +id : VARCHAR(250)
  name : VARCHAR(250)
  email : VARCHAR(250)
  password : VARCHAR(255)
  git_url : VARCHAR(350)
  git_access_token : VARCHAR(250)
}

TABLE(Project) {
  +id : INT
  name : VARCHAR(250)
  original_name : VARCHAR(250)
  created_at : DATETIME
  url : VARCHAR(250)
  is_uploaded : TINYINT
  account_id : VARCHAR(250)
}

TABLE(Analysis_Record) {
  +id : INT
  score : ENUM('A','B','C','D')
  started_at : DATETIME
  status : ENUM('PENDING','RUNNING','COMPLETED','FAILED')
  project_id : INT
}

TABLE(Analysis_Tools) {
  analysis_record_id : INT
  tool_id : INT
}

TABLE(Tools) {
  +id : INT
  name : VARCHAR(250)
}

TABLE(Rule) {
  +id : INT
  check_id : VARCHAR(250)
  name : VARCHAR(250)
  description : TEXT
  owasp_category_id : INT
}

TABLE(OWASP_Category) {
  +id : INT
  name : VARCHAR(250)
}

TABLE(Finding) {
  +id : INT
  file_path : VARCHAR(250)
  severity : ENUM('LOW','MEDIUM','HIGH','CRITICAL')
  code : TEXT
  fingerprint : VARCHAR(255)
  is_corrected : TINYINT
  tool_id : INT
  rule_id : INT
  analysis_record_id : INT
}

TABLE(Line_Info) {
  +id : INT
  start_index : INT
  end_index : INT
  finding_id : INT
}

TABLE(Solution) {
  +id : INT
  corrective_measure : TEXT
  finding_id : INT
}

TABLE(Report) {
  +id : INT
  format : VARCHAR(50)
  created_at : DATETIME
  path : VARCHAR(250)
  original_name : VARCHAR(250)
  analysis_id : INT
}

TABLE(Blacklisted_Token) {
  +id : INT
  hash_token : VARCHAR(250)
  epired_at : DATETIME
  issue_at : DATETIME
  account_id : VARCHAR(250)
}

' =========================
' Relations
' =========================

Account "1" -- "0..N" Project
Project "1" -- "0..N" Analysis_Record

Analysis_Record "1" -- "0..N" Analysis_Tools
Analysis_Tools "0..N" -- "1" Tools

Finding "0..1" -- "0..1" Tools

Analysis_Record "1" -- "0..N" Finding
Finding "0..N" -- "1" Rule
Rule "0..N" -- "1" OWASP_Category
Finding "1" -- "0..N" Line_Info
Finding "1" -- "0..1" Solution
Analysis_Record "1" -- "0..1" Report
Account "1" -- "0..N" Blacklisted_Token

@enduml